--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,10 @@
               "src/assets"
             ],
             "styles": [
+               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+               "node_modules/primeng/resources/primeng.min.css",
+               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -100,5 +104,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c0cf10bc-0fea-4d5b-8b38-423506700f1b"
   }
 }
